commit Adelantos Registro de usuario y detallitos on 'angel'

--- a/templates/404.html
+++ b/templates/404.html
@@ -12,6 +12,9 @@
 {% endblock %} {% block content %}
 
 <section class="dataUser">
-  <h2>Disculpa la molestia, se han escapado nuestros esclavos</h2>
+  <h2>
+    404<br />
+    Disculpa la molestia, se han escapado nuestros esclavos
+  </h2>
 </section>
 {% endblock %}
