--- a/templates/base.html
+++ b/templates/base.html
@@ -205,7 +205,7 @@
           <span class="modal-psw"
             ><a href="#">¿Ha olvidado su Contraseña?</a></span
           >
-          <span class="modal-psw"><a href="#">¿Eres Nuevo Usuario?</a></span>
+          <span class="modal-psw"><a href="{{ url_for("register") }}">¿Eres Nuevo Usuario?</a></span>
         </form>
       </div>
       <!-- END MODAL BOX -->
