--- a/templates/gestionAdministradores.html
+++ b/templates/gestionAdministradores.html
@@ -60,7 +60,7 @@
         <div class="form_dataUser" id="form_dataUser">
           <h4>Crear Nuevo Administrador</h4>
 
-          <form action="/addAdmin" class="inputs_dataUser" method="post">
+          <form action="/addAdmin" class="inputs_dataUser" method="POST">
             <label for="cedula">Cédula</label>
             <input type="text" class="input_user" name="Cedula" id="cedula" placeholder="Cédula" />
 
