commit adelantos registro html y css on 'angel'

--- a/templates/404.html
+++ b/templates/404.html
@@ -1,13 +1,9 @@
 {% extends "base.html" %}{% block head %}
+
 <link
   rel="stylesheet"
   type="text/css"
-  href="{{ url_for('static', filename='css/base.css') }}"
-/>
-<link
-  rel="stylesheet"
-  type="text/css"
-  href="{{ url_for('static', filename='css/gestionAdministradores.css') }}"
+  href="{{ url_for('static', filename='css/404.css') }}"
 />
 {% endblock %} {% block content %}
 
@@ -16,5 +12,25 @@
     404<br />
     Disculpa la molestia, se han escapado nuestros esclavos
   </h2>
+  <!-- <img
+    src="{{ url_for('static', filename='\img\img-resources\get-to-work-work.gif') }}"
+    alt="get-back-to-work"
+    style="width: 434px; height: 323.321px; margin: 0px"
+  /> -->
+
+  <div
+    class="tenor-gif-embed"
+    data-postid="15496843"
+    data-share-method="host"
+    data-aspect-ratio="1.33891"
+    data-width="50%"
+  >
+    <a
+      href="https://tenor.com/view/get-to-work-work-simpsons-smithers-trendizisst-gif-15496843"
+      >Get To Work Work GIF</a
+    >from
+    <a href="https://tenor.com/search/get+to+work-gifs">Get To Work GIFs</a>
+  </div>
 </section>
+<script type="text/javascript" async src="https://tenor.com/embed.js"></script>
 {% endblock %}
