--- a/static/css/contacto.css
+++ b/static/css/contacto.css
@@ -1,3 +1,11 @@
+:root {
+  --blue: #005596;
+  --white: #f8f8f2;
+  --grey: #d9d9d9;
+  --black1: #282a36;
+  --black2: #999;
+}
+
 .dataUser form {
   display: flex;
   flex-direction: column;
