--- a/static/css/registro.css
+++ b/static/css/registro.css
@@ -1,38 +1,84 @@
+:root {
+  --blue: #005596;
+  --white: #f8f8f2;
+  --grey: #d9d9d9;
+  --black1: #282a36;
+  --black2: #999;
+}
+.base-main {
+  background-color: var(--blue);
+}
+
 .dataUser form {
+  background-color: var(--white);
   display: flex;
   flex-direction: column;
-  margin: auto auto auto 20%;
+  gap: 0.5rem;
+  margin: auto 50% auto auto;
+  padding: 5rem 0 5rem 5rem;
+  min-width: fit-content;
+  /* background-color: mediumpurple; */
 }
 .dataUser h2 {
-  margin-top: 10rem;
-  margin-bottom: 1rem;
+  color: var(--blue);
+  /* margin: 10rem 0 1rem 0; */
+  padding: 1rem 0 1rem 0;
 }
+
 .dataUser label {
-  width: 8rem;
-  display: flex;
-  flex-direction: column;
-  margin-right: 1rem;
-  margin-top: 1rem;
+  /* color: var(--blue); */
+  /* width: 8rem; */
+  /* display: flex; */
+  /* flex-direction: column; */
+  margin-left: 5rem;
+  /* margin-top: 1rem; */
   font-weight: bold;
 }
+
 .dataUser input {
   width: 24rem;
   height: 2rem;
 }
+
 .dataUser .btnConfirm {
-  background-color: #005596;
-  color: #f2f2f2;
+  background-color: var(--blue);
+  color: var(--white);
   border: none;
   width: 8rem;
   height: 2.5rem;
   margin-left: auto;
   font-weight: bold;
   font-size: 1rem;
+  border-radius: 1.75rem;
   margin-bottom: 6rem;
   cursor: pointer;
 }
 
-/* main .base-main .inputs_dataUser {
-  margin-left: 20%;
-  padding: 1rem;
-} */
+.dataUser .btnConfirm:hover {
+  background-color: var(--white);
+  color: var(--blue);
+  border: var(--blue) solid 1px;
+}
+
+.dataUser .form p {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-right: 5rem;
+  /* background-color: chocolate; */
+
+  /* justify-content: space-between; */
+  /* flex-wrap: wrap; */
+}
+.dataUser .form p span {
+  display: flex;
+  justify-content: flex-end;
+  width: 35rem;
+  gap: 1rem;
+  align-items: center;
+  /* background-color: firebrick; */
+}
+
+.dataUser span i {
+  color: var(--blue);
+}
