--- a/static/css/gestionUsuarios.css
+++ b/static/css/gestionUsuarios.css
@@ -41,6 +41,7 @@ h2 {
   margin: 0 0 2rem 10%;
 }
 
+.table_reserves,
 .table_reviews,
 .table_users {
   margin-left: 10%;
@@ -50,12 +51,14 @@ h2 {
   margin-bottom: 0.4rem;
 }
 
+.table_reserves th:nth-child(-n+2),
 .table_reviews th:nth-child(-n+2),
 .table_users th:nth-child(1) {
   width:auto;
   padding: 0 1rem 1rem 1rem;
 }
 
+.table_reserves th,
 .table_reviews th,
 .table_users th {
   width:auto;
@@ -65,11 +68,17 @@ h2 {
   border-bottom-style: double;
 }
 
+.table_reserves td,
 .table_reviews td,
 .table_users td {
   padding: 0.5rem;
   text-align: center;
   vertical-align: center;
+}
+
+.reserves,
+.reviews {
+  margin-top: 6rem;
 }
 
 .dataUser form {
@@ -99,7 +108,6 @@ h2 {
   width: 12rem;
   height: 1.5rem;
   margin: 1.5rem 1.5rem 1rem 1.5rem;
-
 }
 /* .inputs_dataUser {
   margin-left: 20%;
@@ -137,43 +145,43 @@ h2 {
   margin-bottom: 6rem;
 } */
 
-.reserves h2 {
+/* .reserves h2 {
   margin-top: 5rem;
   margin-left: 10%;
-}
+} */
 
-.reservesTable {
+/* .reservesTable {
   margin-left: 10%;
   border-collapse: separate;
   border: black 1px solid;
   background-color: lightgray;
   padding-bottom: 10rem;
-}
+} */
 
-.reservesTable th {
+/* .reservesTable th {
   width: 8rem;
   text-align: center;
   border-bottom-style: double;
 }
 .reservesTable td {
   text-align: center;
-}
+} */
 
-.reserves input,
+/* .reserves input,
 .reserves h4 {
   display: inline-block;
   margin-top: 2rem;
-}
-.reserves input {
+} */
+/* .reserves input {
   margin-left: 30%;
-}
+} */
 
-.reserves h4 {
+/* .reserves h4 {
   margin-left: 16rem;
   margin-top: 0;
   text-align: center;
   font-weight: lighter;
-}
+} */
 
 /*Sección de Comentarios*/
 /* .reviews {
@@ -268,16 +276,19 @@ h2 {
     /* font-size: 1rem; */
   }
   
+  .eliminar_reserve,
   .eliminar_review {
     padding-top: 9rem;
   }
 
+  .eliminar_reserve form,
   .eliminar_review form{
     display: flex;
     flex-direction: column;
     margin: auto auto 3rem 10%;
   }
 
+  .eliminar_reserve label,
   .eliminar_review label {
     width: 16rem;
     /* display: flex;
@@ -286,6 +297,7 @@ h2 {
     font-weight: bold;
   }
   
+  .input_reserve,
   .input_review {
     text-align: center;
     width: 10rem;
