--- a/static/css/index.css
+++ b/static/css/index.css
@@ -4,10 +4,11 @@
   --grey: #d9d9d9;
   --black1: #282a36;
   --black2: #999;
+  --red: firebrick;
 }
 
 #img-main {
-  padding: 0 1.68rem 1.68rem 1.68rem;
+  padding: 0 0 1.68rem 0;
   /* max-width: 80%; */
   vertical-align: center;
   width: 100%;
@@ -31,10 +32,12 @@
   width: auto;
   padding: 16px;
   margin-top: -50px;
-  color: white;
+  color: var(--blue);
+  background-color: var(--white);
+  filter: opacity(50%);
   font-weight: bold;
   font-size: 20px;
-  border-radius: 0 3px 3px 0;
+  border-radius: 0 30px 30px 0;
   user-select: none;
   -webkit-user-select: none;
 }
@@ -42,13 +45,14 @@
 /* POSICION BOTON NEXT DERECHA */
 .next {
   right: 1.68rem;
-  border-radius: 3px 0 0 3px;
+  border-radius: 30px 0 0 30px;
 }
 
 /* HOVER BOTONES */
 .prev:hover,
 .next:hover {
   background-color: var(--blue);
+  color: var(--white);
 }
 
 /* Number text (1/3 etc) */
@@ -80,7 +84,7 @@
   /* margin: 4rem 4rem; */
   margin: 2rem auto;
   column-width: 14em;
-  max-width: 50rem;
+  max-width: 55rem;
 }
 /* TITULO */
 .information h3 {
@@ -163,11 +167,13 @@
   color: #f8f8f2;
   margin-right: 1rem;
 }
+/* BOTON RESERVAR */
 .booking form input {
   text-align: center;
-  border-radius: 0.5rem;
-  text-align:center;
-  border-color: #f8f8f2;
+  font-size: 1rem;
+  border-radius: 1rem;
+  text-align: center;
+  /* border-color:; */
   margin-right: 1rem;
 }
 .little-input {
@@ -181,35 +187,36 @@
 /* PRECIO */
 .booking-right span {
   margin-bottom: 1rem;
-  border-color: var(--white);
+  font-weight: bolder;
   color: var(--white);
 }
 
 .btn-booking {
-  background-color: firebrick;
+  background-color: var(--red);
   color: var(--white);
-  border: 1px solid var(--white);
+  border: 2px solid var(--white);
   padding: 0.4rem 3em;
 }
 
 .btn-booking:hover {
   background-color: var(--white);
-  color: var(--blue);
+  border: 2px solid var(--red);
+  color: var(--red);
   cursor: pointer;
   /* padding: 0rem 3em; */
 }
 
 .information .btn-share:hover {
-  background-color: firebrick;
+  background-color: var(--red);
   color: var(--white);
 }
 .information .btn-share {
   background-color: var(--blue);
   color: var(--white);
-  border: 1px solid var(--white);
+  /* border: 1px solid var(--white); */
   padding: 0.4rem 3em;
   width: 100%;
-  border-radius: 0.5rem;
+  border-radius: 1rem;
   text-decoration: none;
 }
 /* .btn-share {
