--- a/templates/editarAdmin.html
+++ b/templates/editarAdmin.html
@@ -1,10 +1,18 @@
-{% extends "base.html" %}
+{% extends "base.html" %} {% block head %}
 
-{% block head %}
-<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/gestionAdministradores.css') }}" />
-{% endblock %}
+<!-- <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/gestionAdministradores.css') }}" /> -->
+<link
+  rel="stylesheet"
+  type="text/css"
+  href="{{ url_for('static', filename='css/base-forms.css') }}"
+/>
+<link
+  rel="stylesheet"
+  type="text/css"
+  href="{{ url_for('static', filename='css/base-buttons.css') }}"
+/>
 
-{% block content %}
+{% endblock %} {% block content %}
 
 <!-- MODAL SAVE DATA-ADMIN -->
 <div id="modal-id04" class="modal">
@@ -34,13 +42,24 @@
       <div>
         <button type="submit" class="modal-confirmbtn">
           Confirmar
-          <img src="img/svg/fa/check-solid.svg" alt="icono logout" height="30" />
+          <img
+            src="img/svg/fa/check-solid.svg"
+            alt="icono logout"
+            height="30"
+          />
         </button>
       </div>
       <div>
-        <button type="button" onclick="document.getElementById('modal-id04').style.display='none'"
-          class="modal-cancelbtn">
-          Cancelar<img src="img/svg/fa/xmark-solid.svg" alt="icono logout" height="30" />
+        <button
+          type="button"
+          onclick="document.getElementById('modal-id04').style.display='none'"
+          class="modal-cancelbtn"
+        >
+          Cancelar<img
+            src="img/svg/fa/xmark-solid.svg"
+            alt="icono logout"
+            height="30"
+          />
         </button>
       </div>
     </div>
@@ -49,70 +68,143 @@
   </form>
 </div>
 <!-- END MODAL SAVE DATA-ADMIN -->
-<main class="container">
-  <!-- SECCION PRINCIPAL -->
-  <div id="main">
-    <div class="base-main">
-      <!-- AREA PRINCIPAL -->
-      <section class="dataUser">
-        <h2>Editar Administrador</h2>
-        <!-- <button class="btnAgregarAdmin" id="btnAgregarAdmin">Agregar Administrador</button> -->
-        <div class="" id="">
-          <!-- <h4>Editar Administrador</h4> -->
+<!-- AREA PRINCIPAL -->
+<section class="dataUser">
+  <form
+    action="/editarAdmin/{{ usuario[0] }}"
+    class="form inputs_dataUser"
+    method="POST"
+  >
+    <h2>Editar Administrador</h2>
+    <p>
+      <label for="cedula">Cédula</label>
+      <span>
+        <input
+          type="text"
+          class="input_user"
+          name="Cedula"
+          id="cedula"
+          value="{{ usuario[1] }}"
+        />
+      </span>
+    </p>
+    <p>
+      <label for="nombre">Nombre</label>
+      <span>
+        <input
+          type="text"
+          class="input_user"
+          name="Nombre"
+          id="nombre"
+          value="{{ usuario[2] }}"
+        />
+      </span>
+    </p>
+    <p>
+      <label for="apellido">Apellido</label>
+      <span>
+        <input
+          type="text"
+          class="input_user"
+          name="Apellidos"
+          id="apellido"
+          value="{{ usuario[3] }}"
+        />
+      </span>
+    </p>
 
-          <form action="/editarAdmin/{{ usuario[0] }}" class="inputs_dataUser" method="post">
-            <label for="cedula">Cédula</label>
-            <input type="text" class="input_user" name="Cedula" id="cedula" value="{{ usuario[1] }}" >
+    <p>
+      <label for="fechaNacimiento">Fecha de Nacimiento</label>
+      <span>
+        <input
+          type="date"
+          class="input_user"
+          name="Fecha_Nacimiento"
+          id="fechaNacimiento"
+          value="{{ usuario[4] }}"
+        />
+      </span>
+    </p>
+    <p>
+      <label for="correo">Correo Electrónico</label>
+      <span>
+        <input
+          type="email"
+          class="input_user"
+          name="Correo"
+          id="correo"
+          value="{{ usuario[5] }}"
+        />
+      </span>
+    </p>
+    <p>
+      <label for="celular">Celular</label>
+      <span>
+        <input
+          type="phone"
+          class="input_user"
+          name="Celular"
+          id="celular"
+          value="{{ usuario[6] }}"
+        />
+      </span>
+    </p>
+    <p>
+      <label for="tipoUsuario">Tipo de Usuario</label>
+      <span>
+        <input
+          type="text"
+          class="input_user"
+          name="Tipo_Usuario"
+          id="tipoUsuario"
+          value="{{ usuario[7] }}"
+          readonly
+        />
+      </span>
+    </p>
 
-            <label for="nombre">Nombre</label>
-            <input type="text" class="input_user" name="Nombre" id="nombre" value="{{ usuario[2] }}" >
-
-            <label for="apellido">Apellido</label>
-            <input type="text" class="input_user" name="Apellidos" id="apellido" value="{{ usuario[3] }}" >
-
-            <label for="fechaNacimiento">Fecha de Nacimiento</label>
-            <input type="date" class="input_user" name="Fecha_Nacimiento" id="fechaNacimiento" value={{ usuario[4] }}>
-
-            <label for="correo">Correo Electrónico</label>
-            <input type="email" class="input_user" name="Correo" id="correo" value={{ usuario[5] }} >
-
-            <label for="celular">Celular</label>
-            <input type="phone" class="input_user" name="Celular" id="celular" value={{ usuario[6] }} >
-            
-            <label for="tipoUsuario">Tipo de Usuario</label>
-            <input type="text" class="input_user" name="Tipo_Usuario" id="tipoUsuario" value={{ usuario[7] }} readonly/>
-            
-            <!-- <label for="anteriorContrasena">Anterior Contraseña</label>
+    <!-- <label for="anteriorContrasena">Anterior Contraseña</label>
             <input type="password" class="input_user" name="Anterior_Contrasena" id="anteriorContrasena" placeholder="Anterior Contraseña" /> -->
-            
-            <label for="nuevaContrasena">Nueva Contraseña</label>
-            <input type="password" class="input_user" name="Nueva_Contrasena" id="nuevaContrasena" value={{ usuario[8] }} />
-            
-            <!-- <label for="confirmarContrasena">Contraseña</label>
+    <p>
+      <label for="nuevaContrasena">Nueva Contraseña</label>
+      <span>
+        <input
+          type="password"
+          class="input_user"
+          name="Nueva_Contrasena"
+          id="nuevaContrasena"
+          value="{{ usuario[8] }}"
+        />
+      </span>
+    </p>
+
+    <!-- <label for="confirmarContrasena">Contraseña</label>
             <input type="password" class="input_user" name="Confirmar_Contrasena" id="confirmarContrasena" placeholder="Confirmar Contraseña" /> -->
-            
-            <div>
-              <input type="submit" name="gestion_usuario" value="Editar Admin">
-              <input type="submit" name="gestion_usuario" value="Eliminar Admin">
-              <input type="submit" name="gestion_usuario" id="cancel_user" value="Cancelar">
-            </div>
-          </form>
 
-        </div>
-
-       </section>
+    <div class="btn-submit-group">
+      <input
+        class="btn-submit btn-submit-blue"
+        type="submit"
+        name="gestion_usuario"
+        value="Editar Admin"
+      />
+      <input
+        class="btn-submit btn-submit-red"
+        type="submit"
+        name="gestion_usuario"
+        value="Eliminar Admin"
+      />
+      <input
+        class="btn-submit btn-submit-gray"
+        type="submit"
+        name="gestion_usuario"
+        id="cancel_user"
+        value="Cancelar"
+      />
     </div>
-  </div>
-</main>
+  </form>
+</section>
 
-<script>
-  // function seleccionar(tr, value) {
-  //   this.chk1.click();
-  // }
-</script>
-
-{% endblock %}
-
-{% block scripts %}
-<script src={{ url_for('static', filename='js/agregarAdmin.js' ) }}></script>
+{% endblock %} {% block scripts %}
+<script src="{{ url_for('static', filename='js/agregarAdmin.js' ) }}"></script>
 {% endblock %}
