--- a/templates/gestionHabitaciones.html
+++ b/templates/gestionHabitaciones.html
@@ -1,10 +1,21 @@
 {% extends "base.html" %} {% block head %}
 
-<link
+<!-- <link
   rel="stylesheet"
   type="text/css"
   href="{{ url_for('static', filename='css/gestionHabitaciones.css') }}"
+/> -->
+<link
+  rel="stylesheet"
+  type="text/css"
+  href="{{ url_for('static', filename='css/base-tables.css') }}"
 />
+<link
+  rel="stylesheet"
+  type="text/css"
+  href="{{ url_for('static', filename='css/base-buttons.css') }}"
+/>
+
 {% endblock %} {% block content %}
 <!-- MODAL DESCRIPTION AND VALUE EDITION -->
 
@@ -281,15 +292,10 @@
   </form>
 </div>
 <!-- END MODAL DELETE ROOMS -->
-<main id="container">
-  <!-- SECCION PRINCIPAL -->
-  <div id="main">
-    <div class="base-main">
-      <!-- AREA PRINCIPAL -->
-      <section class="dataUser">
-        <h2>Gestión Habitaciones</h2>
-        <!-- LISTA HABITACIONES -->
-        <!-- <input
+<!-- AREA PRINCIPAL -->
+<section class="dataUser">
+  <!-- LISTA HABITACIONES -->
+  <!-- <input
           class="buscador"
           type="email"
           placeholder="Buscar por ID"
@@ -305,49 +311,49 @@
           Editar Descripción y Valor
         </button>
         <h2>Habitaciones</h2> -->
-        <!-- <input class="btnEditar" type="submit" name="botonEditar" value="Editar Descripción y Valor" /> -->
+  <!-- <input class="btnEditar" type="submit" name="botonEditar" value="Editar Descripción y Valor" /> -->
 
-        <div class="rooms">
-          <div>
-            <table class="roomsTable">
-              <thead>
-                <tr>
-                  <th>ID</th>
-                  <th>Capacidad</th>
-                  <th>Precio</th>
-                  <th>Gestionar</th>
-                </tr>
-              </thead>
-              <tbody style="cursor: pointer">
-                {% for i in range(habitaciones|length) %}
-                <tr>
-                  <td>{{ habitaciones[i][0] }}</td>
-                  <td>{{ habitaciones[i][1] }}</td>
-                  <td>{{ habitaciones[i][2] }}</td>
-                  <td>
-                    <a
-                      href="/eliminarRoom/{{habitaciones[i][0]}}"
-                      class="btnEliminar"
-                      id="btnEliminarRoom"
-                      
-                      >Eliminar</a
-                    >
-                  </td>
-                </tr>
-                {% endfor %}
-              </tbody>
-            </table>
-          </div>
-          <div>
-            <input
-              class="btnEditar"
-              type="submit"
-              name="botonEditar"
-              value="Agregar Habitación"
-              onclick="document.getElementById('modal-id05').style.display='block'"
-              data-open="modal-id05"
-            />
-            <!-- <br />
+  <section class="rooms">
+    <h2>Gestión Habitaciones</h2>
+    <div>
+      <table class="tables roomsTable">
+        <thead>
+          <tr>
+            <th>ID</th>
+            <th>Capacidad</th>
+            <th>Precio</th>
+            <th>Gestionar</th>
+          </tr>
+        </thead>
+        <tbody style="cursor: pointer">
+          {% for i in range(habitaciones|length) %}
+          <tr>
+            <td>{{ habitaciones[i][0] }}</td>
+            <td>{{ habitaciones[i][1] }}</td>
+            <td>{{ habitaciones[i][2] }}</td>
+            <td>
+              <a
+                href="/eliminarRoom/{{habitaciones[i][0]}}"
+                class="btn-submit btn-submit-red btnEliminar"
+                id="btnEliminarRoom"
+                >Eliminar</a
+              >
+            </td>
+          </tr>
+          {% endfor %}
+        </tbody>
+      </table>
+    </div>
+    <div class="btn-submit-group">
+      <input
+        class="btn-submit btn-submit-blue btnEditar"
+        type="submit"
+        name="botonEditar"
+        value="Agregar Habitación"
+        onclick="document.getElementById('modal-id05').style.display='block'"
+        data-open="modal-id05"
+      />
+      <!-- <br />
             <select name="estado" id="estado">
               <option value="d">Desocupada</option>
               <option value="o">Ocupada</option>
@@ -368,12 +374,9 @@
               onclick="document.getElementById('modal-id04').style.display='block'"
               data-open="modal-id04"
             /> -->
-          </div>
-        </div>
-      </section>
     </div>
-  </div>
-</main>
+  </section>
+</section>
 <script>
   function seleccionar(tr, value) {
     this.chk1.click();
