--- a/templates/index.html
+++ b/templates/index.html
@@ -2,16 +2,10 @@
 <link
   rel="stylesheet"
   type="text/css"
-  href="{{ url_for('static', filename='css/base.css') }}"
-/>
-<link
-  rel="stylesheet"
-  type="text/css"
   href="{{ url_for('static', filename='css/index.css') }}"
 />
 {% endblock %} {% block content %}
-
-<main class="container">
+<section>
   <!-- CONTENEDOR DE GALERIA -->
   <div id="img-main" class="galeria">
     <!-- IMAGENES CON NUMERACION -->
@@ -77,7 +71,8 @@
     <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
     <a class="next" onclick="plusSlides(1)">&#10095;</a>
   </div>
-
+</section>
+<section>
   <!-- INPUT RESERVAS -->
   <div class="booking-principal">
     <div class="booking">
@@ -130,7 +125,8 @@
       <!--Boton Compartir-->
     </div>
   </div>
-
+</section>
+<section>
   <!-- CONTENIDO DESCRIPCIÓN -->
   <div class="information">
     <div class="text">
@@ -199,6 +195,6 @@
       </div>
     </div>
   </div>
-</main>
+</section>
 
 {% endblock %}
